[package]
name = "game"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = {path = "../../amethyst"}
serde = "1.0.103"
tiled_support = { path = "../amethyst-tiled" }

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
profiler = ["amethyst/profiler"]
no-slow-safety-checks = ["amethyst/no-slow-safety-checks"]
